--- a/pyth_feed/client/Cargo.toml
+++ b/pyth_feed/client/Cargo.toml
@@ -9,3 +9,6 @@ anchor-lang = "0.25.0"
 clockwork-sdk = { version = "1.3.1", features = ["client"] }
 pyth_feed = { path = "../programs/pyth_feed", features = ["no-entrypoint"], version = "0.1.0" }
 solana-sdk = "1.10.34"
+
+[features]
+localnet = []
