--- a/serum_crank/programs/serum_crank/Cargo.toml
+++ b/serum_crank/programs/serum_crank/Cargo.toml
@@ -14,14 +14,12 @@ no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
 default = []
-localnet = []
-devnet = []
 
 [profile.release]
 overflow-checks = true
 
 [dependencies]
-anchor-spl = { version = "0.26.0", features = ["dex"] }
-anchor-lang = "0.26.0"
-clockwork-sdk = { version = "1.4.0" }
+anchor-spl = { version = "0.25.0", features = ["dex"] }
+anchor-lang = "0.25.0"
+clockwork-sdk = { version = "1.3.9", features = ["thread"] }
 safe-transmute = "0.11.0"
