--- a/investments/client/Cargo.toml
+++ b/investments/client/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 [dependencies]
 investments-program = { path = "../programs/investments", features = ["no-entrypoint"], version = "0.1.0" }
 serum-crank = { path = "../../serum_crank/programs/serum_crank", features = ["no-entrypoint"], version = "0.1.0" }
-clockwork-sdk = { version = "1.3.9", features = ["client"] }
-anchor-spl = { version = "0.25.0", features = ["dex"] }
-anchor-lang = "0.25.0"
-solana-sdk = "1.10.34"
-solana-client = "1.10.34"
+clockwork-client = "1.4.0"
+anchor-spl = { version = "0.26.0", features = ["dex"] }
+anchor-lang = "0.26.0"
+solana-sdk = "1.13.5"
+solana-client = "1.13.5"
 serum-common = { version = "0.4.7", features = ["client"] }
