--- a/payments/client/Cargo.toml
+++ b/payments/client/Cargo.toml
@@ -8,9 +8,10 @@ edition = "2021"
 [dependencies]
 anchor-lang = "0.26.0"
 anchor-spl = { version = "0.26.0", features = ["dex"] }
-clockwork-client = { version = "1.4.0" }
-clockwork-utils = { version = "1.4.0" }
+clockwork-client = {git="https://github.com/clockwork-xyz/clockwork.git", rev="512677377e64cbf207ea0b1041147dfa2db00362"}
+clockwork-utils = {git="https://github.com/clockwork-xyz/clockwork.git", rev="512677377e64cbf207ea0b1041147dfa2db00362"}
+clockwork-thread-program = {git="https://github.com/clockwork-xyz/clockwork.git", rev="512677377e64cbf207ea0b1041147dfa2db00362"}
 payments = { path = "../programs/payments", features = ["no-entrypoint"], version = "0.1.0" }
-#solana-client = "1.10.34"
+
 solana-cli-config = "1.10.4"
-solana-sdk = "1.13.5"
+solana-sdk = "1.14.13"
