--- a/payments/programs/payments/Cargo.toml
+++ b/payments/programs/payments/Cargo.toml
@@ -18,4 +18,4 @@ default = []
 [dependencies]
 anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
 anchor-spl = { version = "0.26.0", features = ["token"] }
-clockwork-sdk = { version = "1.4.0" }
+clockwork-sdk = {git="https://github.com/clockwork-xyz/clockwork.git", rev="512677377e64cbf207ea0b1041147dfa2db00362"}
