--- a/payments/client/Cargo.toml
+++ b/payments/client/Cargo.toml
@@ -14,3 +14,6 @@ payments = { path = "../programs/payments", features = ["no-entrypoint"], versio
 #solana-client = "1.10.34"
 solana-cli-config = "1.10.4"
 solana-sdk = "1.13.5"
+
+[features]
+localnet = []
