--- a/investments/client/Cargo.toml
+++ b/investments/client/Cargo.toml
@@ -5,10 +5,8 @@ edition = "2021"
 
 [dependencies]
 investments-program = { path = "../programs/investments", features = ["no-entrypoint"], version = "0.1.0" }
-openbook-crank = { path = "../../openbook_crank/programs/openbook_crank", features = ["no-entrypoint"], version = "0.1.0" }
 clockwork-client = "1.4.0"
 anchor-spl = { version = "0.26.0", features = ["dex"] }
 anchor-lang = "0.26.0"
 solana-sdk = "1.13.5"
-solana-client = "1.13.5"
-serum-common = { version = "0.4.7", features = ["client"] }
+solana-cli-config = "1.13.5"
