--- a/payments/Anchor.toml
+++ b/payments/Anchor.toml
@@ -3,17 +3,17 @@ seeds = false
 skip-lint = false
 
 [programs.localnet]
-payments = "AczpjY2Lyku1YNAM1saMuPhQB4jcJZzffGf9ptstrJZM"
+payments = "BvpYVck2GmCcoHrvtj1UDZ76xACcW1fP4HeUgCZKqiCP"
 
 [programs.devnet]
-payments = "AczpjY2Lyku1YNAM1saMuPhQB4jcJZzffGf9ptstrJZM"
+payments = "BvpYVck2GmCcoHrvtj1UDZ76xACcW1fP4HeUgCZKqiCP"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
-wallet = "~/.config/solana/id.json"
+cluster = "devnet"
+wallet = "/home/amir/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
