--- a/openbook_dca/programs/openbook_dca/Cargo.toml
+++ b/openbook_dca/programs/openbook_dca/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "investments-program"
+name = "openbook-dca"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "investments_program"
+name = "openbook_dca"
 
 [features]
 no-entrypoint = []
@@ -15,11 +15,8 @@ no-log-ix-name = []
 cpi = ["no-entrypoint"]
 default = []
 
-[profile.release]
-overflow-checks = true
-
 [dependencies]
 anchor-spl = { version = "0.26.0", features = ["dex"] }
-anchor-lang = "0.26.0"
-clockwork-sdk = "1.4.0"
+anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
+clockwork-sdk = "1.4.2"
 safe-transmute = "0.11.0"
