--- a/walkthroughs/hello_clockwork/finish/hello_clockwork/package.json
+++ b/walkthroughs/hello_clockwork/finish/hello_clockwork/package.json
@@ -4,7 +4,7 @@
         "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
     },
     "dependencies": {
-        "@clockwork-xyz/sdk": "0.0.9",
+        "@clockwork-xyz/sdk": "^0.0.9",
         "@project-serum/anchor": "^0.26.0"
     },
     "devDependencies": {
