--- a/event_stream/Anchor.toml
+++ b/event_stream/Anchor.toml
@@ -3,13 +3,13 @@ seeds = false
 skip-lint = false
 
 [programs.localnet]
-event_stream = "3jAVzWXRAdYtinGn3as2veAmt1BuabzmECGCiQxWnSEr"
+event_stream = "9rYwiPDRFpaPYYJweMoxz4pzuUx3Ja2LZJ6uMWTWuVKU"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
+cluster = "devnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
