--- a/swap/crates/whirlpool/Cargo.toml
+++ b/swap/crates/whirlpool/Cargo.toml
@@ -13,3 +13,5 @@ cpi = ["no-entrypoint"]
 [dependencies]
 anchor-lang = "0.26.0"
 anchor-gen = { git = "https://github.com/eliascm17/anchor-gen", version = "^0.3.1", features = ["compat-program-result"] }
+whirlpool = { git = "https://github.com/orca-so/whirlpools", tag = "0.2.0", package = "whirlpool", features = ["cpi"] }
+rust_decimal = { version = "1.23", features = ["maths"] }
