--- a/payments/package.json
+++ b/payments/package.json
@@ -1,12 +1,13 @@
 {
     "scripts": {
         "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
-        "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
+        "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
+        "programid:new": "rm target/deploy/payments-keypair.json && ./deploy.sh devnet"
     },
     "dependencies": {
-        "@clockwork-xyz/sdk": "0.0.9",
-        "@solana/spl-token": "^0.2.0",
-        "@project-serum/anchor": "^0.26.0"
+        "@clockwork-xyz/sdk": "^0.2.3",
+        "@project-serum/anchor": "^0.26.0",
+        "@solana/spl-token": "^0.2.0"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
