--- a/distributor/Cargo.toml
+++ b/distributor/Cargo.toml
@@ -1,5 +1,7 @@
 [workspace]
 members = [
-    "client",
     "programs/*"
 ]
+
+[patch.crates-io]
+clockwork-sdk = { git = "https://github.com/clockwork-xyz/clockwork", tag = "v2.0.1" }
