--- a/counter/Anchor.toml
+++ b/counter/Anchor.toml
@@ -1,14 +1,14 @@
 [features]
 seeds = false
+skip-lint = false
 
 [programs.localnet]
-distributor = "ARdMXW5cuNAoNmtCDfrJRYStNXsHgc6yeapTkz9YAYSq"
-
+counter = "Csf7WudL2YPVCS7Q6eRto7BBjwsfaXC6WDs7k4CU531B"
 [programs.devnet]
-distributor = "ARdMXW5cuNAoNmtCDfrJRYStNXsHgc6yeapTkz9YAYSq"
+counter = "Csf7WudL2YPVCS7Q6eRto7BBjwsfaXC6WDs7k4CU531B"
 
 [registry]
-url = "https://anchor.projectserum.com"
+url = "https://api.apr.dev"
 
 [provider]
 cluster = "devnet"
