--- a/counter/package.json
+++ b/counter/package.json
@@ -4,18 +4,17 @@
         "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
     },
     "dependencies": {
-        "@clockwork-xyz/sdk": "^0.2.3",
-        "@solana/spl-token": "^0.2.0",
-        "@project-serum/anchor": "^0.26.0"
+        "@project-serum/anchor": "^0.26.0",
+        "@clockwork-xyz/sdk": "^0.2.3"
     },
     "devDependencies": {
+        "chai": "^4.3.4",
+        "mocha": "^9.0.3",
+        "ts-mocha": "^10.0.0",
         "@types/bn.js": "^5.1.0",
         "@types/chai": "^4.3.0",
         "@types/mocha": "^9.0.0",
-        "chai": "^4.3.4",
-        "mocha": "^9.0.3",
-        "prettier": "^2.6.2",
-        "ts-mocha": "^10.0.0",
-        "typescript": "^4.3.5"
+        "typescript": "^4.3.5",
+        "prettier": "^2.6.2"
     }
 }
