--- a/2-counter/programs/counter/Cargo.toml
+++ b/2-counter/programs/counter/Cargo.toml
@@ -16,5 +16,5 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
-clockwork-sdk = { version = "~2.0.1" }
+anchor-lang = { version = "0.27.0", features = ["init-if-needed"] }
+clockwork-sdk = { version = "2.0.15" }
