--- a/1-hello_clockwork/package.json
+++ b/1-hello_clockwork/package.json
@@ -8,6 +8,7 @@
         "@project-serum/anchor": "^0.26.0"
     },
     "devDependencies": {
+        "@utils": "file:../utils",
         "@types/bn.js": "^5.1.0",
         "@types/chai": "^4.3.0",
         "@types/mocha": "^9.0.0",
