--- a/2-counter/package.json
+++ b/2-counter/package.json
@@ -8,6 +8,7 @@
         "@clockwork-xyz/sdk": "^0.3.0"
     },
     "devDependencies": {
+        "@utils": "file:../utils",
         "chai": "^4.3.4",
         "mocha": "^9.0.3",
         "ts-mocha": "^10.0.0",
