--- a/subscriptions/client/Cargo.toml
+++ b/subscriptions/client/Cargo.toml
@@ -6,12 +6,11 @@ edition = "2021"
 [dependencies]
 subscriptions-program = { path = "../programs/subscriptions", features = ["no-entrypoint"], version = "0.1.0" }
 clap = { version = "4.0.28", features = ["derive"] }
-clockwork-sdk = { version = "1.3.9", features = ["client"] }
-clockwork-crank = "1.0.5"
-anchor-spl = "0.25.0"
-anchor-lang = "0.25.0"
-solana-sdk = "1.10.34"
-solana-client = "1.10.34"
+clockwork-sdk = { version = "2.0.17" }
+anchor-spl = "=0.27.0"
+anchor-lang = "=0.27.0"
+solana-sdk = "=1.14.16"
+solana-client = "=1.14.16"
 dotenv = "0.15.0"
 serde_json = "1.0.89"
 serde = "1.0.147"
