--- a/subscriptions/programs/subscriptions/Cargo.toml
+++ b/subscriptions/programs/subscriptions/Cargo.toml
@@ -19,6 +19,6 @@ default = []
 overflow-checks = true
 
 [dependencies]
-anchor-lang = "0.25.0"
-anchor-spl = { version = "0.25.0", features = ["token"] }
-clockwork-sdk = { version = "1.3.9", features = ["thread"] }
+anchor-lang = "=0.27.0"
+anchor-spl = { version = "=0.27.0", features = ["token"] }
+clockwork-sdk = { version = "=2.0.17" }
